8 February 2016: Wouter
	- Fix patch typo in prevuous commit for 734 from Adi Prasaja.
	- RR Type CSYNC support RFC 7477, in debug printout and config input.

29 January 2016: Wouter
	- Neater cmdline_verbose increment patch from Edgar Pettijohn.

27 January 2016: Wouter
	- Made netbsd sendmsg test nonfatal, in case of false positives.
	- Fix #741: log message for dnstap socket connection is more clear.

26 January 2016: Wouter
	- Fix #734: chown the pidfile if it resides inside the chroot.
	- Use arc4random instead of random in tests (because it is
	  available, possibly as compat, anyway).
	- Fix cmsg alignment for argument to sendmsg on NetBSD.
	- Fix that unbound complains about unimplemented IP_PKTINFO for
	  sendmsg on NetBSD (for interface-automatic).

25 January 2016: Wouter
	- Fix #738: Swig should not be invoked with CPPFLAGS.

19 January 2016: Wouter
	- Squelch 'cannot assign requested address' log messages unless
	  verbosity is high, it was spammed after network down.

14 January 2016: Wouter
	- Fix to simplify empty string checking from Michael McConville.
	- iana portlist update.

12 January 2016: Wouter
	- Fix #734: Do not log an error when the PID file cannot be chown'ed.
	  Patch from Simon Deziel.

11 January 2016: Wouter
	- Fix test if -pthreads unused to use better grep for portability.

06 January 2016: Wouter
	- Fix mingw crosscompile for recent mingw.
	- Update aclocal, autoconf output with new versions (1.15, 2.4.6).

05 January 2016: Wouter
	- #731: tcp-mss, outgoing-tcp-mss options for unbound.conf, patch
	  from Daisuke Higashi.
	- Support RFC7686: handle ".onion" Special-Use Domain. It is blocked
	  by default, and can be unblocked with "nodefault" localzone config.

04 January 2016: Wouter
	- Define DEFAULT_SOURCE together with BSD_SOURCE when that is defined,
	  for Linux glibc 2.20.
	- Fixup contrib/aaaa-filter-iterator.patch for moved contents in the
	  source code, so it applies cleanly again.  Removed unused variable
	  warnings.
