@@ -1,6 +1,7 @@
 8 February 2016: Wouter
 	- Fix patch typo in prevuous commit for 734 from Adi Prasaja.
 	- RR Type CSYNC support RFC 7477, in debug printout and config input.
+	- RR Type OPENPGPKEY support (draft-ietf-dane-openpgpkey-07).
 
 29 January 2016: Wouter
 	- Neater cmdline_verbose increment patch from Edgar Pettijohn.
